Finalizing contentfour - Went back and forth on using div or p - Final use is div for all contentfour - Fixed padding and spacing - Fixed button in contentfour

--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ button {
 .contentthree,
 .contentfour {
     display: flex;
-    justify-content: space-evenly;
+    
     flex-basis: 500px;
     align-items: center;
 }
@@ -94,16 +94,6 @@ button {
 
     justify-content: space-evenly;
     gap: 50px;
-
-    /*
-    padding-left: 50px;
-    padding-bottom: 100px;
-    */
-    /*
-    display: flex;
-    justify-content: space-around;
-    flex-basis: 350px;
-    */
 }
 
 .onetextcontainer {
@@ -118,6 +108,7 @@ button {
 
 .contenttwo {
     flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .twopictures > div > img {
@@ -148,14 +139,43 @@ button {
 
 .contentthree {
     background: #e5e7eb;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.quotetext {
     font-size: 36px;
     color: #1F2937;
     font-style: italic;
     font-weight: 100;
 }
 
+.quoteauthor {
+    font-size: 28px;
+    font-weight: bold;
+    padding-left: 400px;
+}
+
 .contentfour {
-    background: #3882F6;
+    justify-content: center;
+}
+
+
+.actionblock {
     color: #F9FAF8;
+    background: #3882F6;
+    width: 850px;
+    border-radius: 10px;
+
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    padding: 40px;
+}
+
+.actiontext {
+    color: #F9FAF8;
+    font-size: 28px;
+    font-weight: bold;
 }
 
